# learn-python-server

./: .gitignore  LICENSE  README.md  README.rst  manage.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
learn_python_server/: admin.py  apps.py  auth.py  finders.py  manage.py  middleware.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
learn_python_server/api/: permissions.py  serializers.py  views.py
learn_python_server/management/commands/: process_logs.py  update_course.py
learn_python_server/migrations/: 0001_initial.py  0002_alter_assignment_unique_together.py  0002_student_domain.py  0003_alter_enrollment_repository.py  0004_alter_courserepositoryversion_repository_and_more.py
learn_python_server/ops/: learn-python.demoply.org  learn-python.py  learn-python.service  learn-python.socket
learn_python_server/static/learn_python_server/css/: timeline.css
learn_python_server/static/learn_python_server/js/: timeline.js  urls.js
learn_python_server/templates/admin/: base.html  course_change_form.html  logfile_change_form.html
learn_python_server/templates/learn_python_server/: base.html  engagement_detail.html  student_repository_timeline.html
learn_python_server/tests/: admin.py  course.py  logs.py  register.py  settings.py
